--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
     <div class="container">
-      <a class="navbar-brand" href="#">Datos sobre Sherma</a>
+      <a class="navbar-brand" href="#">Tonkas Tecnologicxs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="#">Inici</a>
+                <a class="text-white text-decoration-none mx-3" href="#"><img src="" alt=""></a>
             </li>
             <li class="nav-item">
                 <a class="text-white text-decoration-none mx-3" href="page/forms.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="https://hollowknight.wiki/w/Sherma">Más Inormacion</a>
+                <a class="text-white text-decoration-none mx-3" href="page/+Inf.html">Más Inormacion</a>
             </li>
             </ul>
         </div>
