--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="#"><img src="" alt=""></a>
+                <a class="text-white text-decoration-none mx-3" href="#"><img src="img/Tonkas Tecnologicx.png" alt="TT"></a>
             </li>
             <li class="nav-item">
                 <a class="text-white text-decoration-none mx-3" href="page/forms.html">Contacto</a>
