--- a/index.html
+++ b/index.html
@@ -6,24 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
     <div class="container">
-      <a class="navbar-brand" href="#">Tonkas Tecnologicxs</a>
+      <a class="d-flex align-items-center navbar-brand" href="#"> <h3>Tonkas Tecnologicxs</h3> <img src="img/Tonkas Tecnologicx.png" alt="TT" width="120px" height="120px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="d-flex align-items-center navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="#"><img src="img/Tonkas Tecnologicx.png" alt="TT"></a>
+                <a class="text-white text-decoration-none mx-3 " href="page/forms.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="page/forms.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3" href="page/+Inf.html">Más Inormacion</a>
+                <a class="text-white text-decoration-none mx-3 " href="page/+Inf.html">Más Inormacion</a>
             </li>
             </ul>
         </div>
