--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="d-flex align-items-center navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3 " href="page/forms.html">Contacto</a>
+                <a class="text-white text-decoration-none mx-3 " href="pages/forms.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3 " href="page/+Inf.html">Más Inormacion</a>
+                <a class="text-white text-decoration-none mx-3 " href="pages/+Inf.html">Más Inormacion</a>
             </li>
             </ul>
         </div>
