--- a/pages/forms.html
+++ b/pages/forms.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
     <div class="container">
-            <a class="navbar-brand" href="../index.html">Datos sobre Sherma</a>
+            <a class="navbar-brand" href="../index.html">Contacta con Tonkas Tecnlogicx</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -55,7 +55,7 @@
     </div>
 </nav>
 <footer class="bg-dark text-white text-center rounded p-3">
-© 2025 Institut Barres i Ones 
+© 2025 Tonkas Tecnlogicx. 
 </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
