--- a/pages/forms.html
+++ b/pages/forms.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
     <div class="container">
-            <a class="navbar-brand" href="../index.html">Contacta con Tonkas Tecnlogicx</a>
+            <a class="navbar-brand" href="../index.html">INICIO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,6 +21,9 @@
                 </li>
             </ul>
         </div>
+
+        <img src="/img/Tonkas Tecnologicx.png" alt="Logo de Tonkas Tecnlogicx">
+        
         <div class="container2" style="max-width: 600px; margin-top: 50px;">
             <div class="row">
                 <div class="col bg-dark rounded p-4">
