--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
 </nav>
 <div header class="bg-dark text-white text-center rounded p-3 mb-3">
-    <h1>Bienvenidos a mi primer diseño en Bootstrap</h1>
+    <h1>Tonkas Tecnologicxs</h1>
+    <p>Tu tienda de tecnologia de confianza</p>
 <div id="container">
 
 </div>
