--- a/pages/forms.html
+++ b/pages/forms.html
@@ -22,8 +22,8 @@
             </ul>
         </div>
 
-        <img src="/img/Tonkas Tecnologicx.png" alt="Logo de Tonkas Tecnlogicx">
-        
+        <img src="img/Tonkas Tecnologicx.png" alt="Logo de Tonkas Tecnlogicx">
+
         <div class="container2" style="max-width: 600px; margin-top: 50px;">
             <div class="row">
                 <div class="col bg-dark rounded p-4">
