--- a/pages/forms.html
+++ b/pages/forms.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
     <div class="container">
             <a class="navbar-brand" href="../index.html">INICIO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -22,7 +21,7 @@
             </ul>
         </div>
 
-        <img src="img/Tonkas Tecnologicx.png" alt="Logo de Tonkas Tecnlogicx">
+        <img src="../img/Tonkas Tecnologicx.png"  width="350px" height="350px" alt="Logo de Tonkas Tecnlogicx">
 
         <div class="container2" style="max-width: 600px; margin-top: 50px;">
             <div class="row">
@@ -56,7 +55,6 @@
             </div>
         </div>
     </div>
-</nav>
 <footer class="bg-dark text-white text-center rounded p-3">
 © 2025 Tonkas Tecnlogicx. 
 </footer> 
