--- a/index.html
+++ b/index.html
@@ -31,38 +31,36 @@
     <h1>Tonkas Tecnologicxs</h1>
     <p>Tu tienda de tecnologia de confianza</p>
 <div id="container">
-<div class="row">
+    <div class="row">
             <div class="d-flex col bg-primary rounded">
                 <div class="card flex-shrink-2">
-                    <img src="img/Sherma_Caretaker.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Lider de Culto</h5>
-                        <p class="card-text">Tras un gran cataclismo se volvio la unca esperanza de los peregrinos de Telalejana.</p>
-                        <a href="#" class="btn btn-primary float-down">Acció</a>
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <img src="img/Edgar.png" class="card-img-top" alt="...">
+                    </div>
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Edgar de la Torre</h5>
+                            <p class="card-text">CoCEO especializado en mecanica.</p>
+                            <a href="https://www.canva.com/design/DAGzrm0UMks/yaTN_-DRa3iPz-QJCPU1pQ/edit?utm_content=DAGzrm0UMks&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary float-down">CV</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="d-flex col bg-success rounded">
                 <div class="card flex-shrink-2">
-                    <img src="img/Observa a Sherma.jpg" class="card-img-top" alt="Sherma Observa">
-                    <div class="card-body">
-                        <h5 class="card-title">Observa</h5>
-                        <p class="card-text">Simplemente la Otorgadora de Deseos alzando a Sherma para mostrarlo en todo su explendor.</p>
-                        <a href="#" class="btn btn-primary">Acció</a>
+                     <div class=" d-flex justify-content-center align-items-center">
+                         <img src="img/Alex.png" class="card-img-top" alt="Sherma Observa">
+                    </div>
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Álex Fernández</h5>
+                            <p class="card-text">CoCEO especializado en programación.</p>
+                            <a href="https://www.canva.com/design/DAGzZiMoEis/7jNKTJkYexDkrkm05MaJrg/edit?utm_content=DAGzZiMoEis&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary">CV</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="d-flex col bg-danger rounded">
-                <div class="card flex-shrink-2">
-                    <img src="img/Sherma adorable.jpg_large" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Adorable verdad</h5>
-                        <p class="card-text">Simplemente Sherma.</p>
-                        <a href="#" class="btn btn-primary">Acció</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
 </div>
 <div id="container2">
         <div class="row" >
