--- a/pages/forms.html
+++ b/pages/forms.html
@@ -9,9 +9,9 @@
 </head>
 
 <body class="bg-light">
-<div class="container-fluid">
+<div class="container-fluid p-0">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="../index.html">Vuelve al Inicio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -28,7 +28,7 @@
 
   <div class="container mt-5">
     <div class="card shadow p-4">
-      <h2 class="form-title">Tu Opinión sobre Albion Online</h2>
+      <h2 class="form-title">Contacta con nosotros</h2>
 
       <form action="https://formspree.io/f/mjkpqjvo" method="POST">
 
@@ -44,7 +44,7 @@
 
         <div class="mb-3">
           <label for="opinion" class="form-label">Numero de telefono:</label>
-          <input type="email" class="form-control" id="numero" name="numero" placeholder="XXX XX XX XX" required>
+          <input type="number" class="form-control" id="numero" name="numero" placeholder="XXX XX XX XX" required>
         </div>
 
         <button type="submit" class="btn btn-primary w-100 mt-3">Enviar opinión</button>
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<footer class="bg-dark text-white text-center rounded p-3 mt-4">
+<footer class="bg-dark text-white text center flex-center p-3 mt-4">
   © 2025 Tonkas Tecnologicx
 </footer>
 
