--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
             </div>
     </div>
 </div>
-<div id="container2">
+<div id="container2" class="bg-dark text-white text-center rounded p-3 mb-3">
+    <div class="row">  
+        <div class="col"    >
+            <h2>Datos de interes</h2>
+            <div class="d-flex align-items-center">
+                <h5>Nuestra empresa se dedica a la gestion y desarrollo de dispositivos tecnologicos. Distribuimos equipo informatico, mecanico y electronico a centros comerciales, centros educativos, centros deportivos y a clientes particulares.</h5>
+            </div>
+        </div>
+            <div class="col">
+            <img src="img/Tonkas Tecnologicx.png" alt="TT" width="250px" height="250px">   
+            </div>
+    </div>
+</div>
+<div id="container3">
         <div class="row" >
             <div class="col bg-dark rounded"></div>
             <div class="col bg-dark rounded">
