--- a/index.html
+++ b/index.html
@@ -86,24 +86,29 @@
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+
 
 
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="img/Observa a Sherma.jpg" alt="Observa" class="d-block w-200"style="width: 300px; height: 300px; ;">
+                    <img src="img/Tonkas Tecnologicx.png" alt="Logo" class="d-block w-200"style="width: 300px; height: 300px; ;">
                     </div>
                     <div class="carousel-item">
-                    <img src="img/Sherma adorable.jpg_large" alt="Adorable" class="d-block w-200" style="width: 300px; height: 300px; ;">
+                    <img src="img/TT Oficina.png" alt="Oficina" class="d-block w-200" style="width: 300px; height: 300px; ;">
                     </div>
                     <div class="carousel-item">
-                    <img src="img/Sherma tocando.jpg" alt="tocando" class="d-block w-200"style="width: 300px; height: 300px; ;">
+                    <img src="img/Entregando a Centros Educativos.png" alt="Escuelas" class="d-block w-200"style="width: 300px; height: 300px; ;">
                     </div>
                     <div class="carousel-item">
-                    <img src="img/Sherma.jpg" alt="Sherma" class="d-block w-200"style="width: 300px; height: 300px; ;">
+                    <img src="img/Centros Urbanos.png" alt="Urbanismo" class="d-block w-200"style="width: 300px; height: 300px; ;">
                     </div>
                     <div class="carousel-item">
-                    <img src="img/Sherma_Caretaker.png" alt="Guardian" class="d-block w-200"style="width: 300px; height: 300px; ;">
+                    <img src="img/Centros Deportivos.png" alt="Gim" class="d-block w-200"style="width: 300px; height: 300px; ;">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="img/Proyecto mas reciente.png" alt="Proyecto" class="d-block w-200"style="width: 300px; height: 300px; ;">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
