--- a/pages/forms.html
+++ b/pages/forms.html
@@ -30,24 +30,43 @@
     <div class="card shadow p-4">
       <h2 class="form-title">Contacta con nosotros</h2>
 
-      <form action="https://formspree.io/f/mjkpqjvo" method="POST">
+      <form action="https://formspree.io/f/mwpykyak" method="POST">
 
         <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre:</label>
+          <label for="Nombre" class="form-label">Nombre completo:</label>
           <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
         </div>
 
         <div class="mb-3">
-          <label for="email" class="form-label">Correo electrónico:</label>
+          <label for="Email" class="form-label">Correo electrónico:</label>
           <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@gmail.com" required>
         </div>
 
         <div class="mb-3">
-          <label for="opinion" class="form-label">Numero de telefono:</label>
-          <input type="number" class="form-control" id="numero" name="numero" placeholder="XXX XX XX XX" required>
+          <label for="Numero de telefono" class="form-label">Numero de telefono:</label>
+          <input type="number" class="form-control" id="numero de telefono" name="numero de telefono" placeholder="XXX XX XX XX" required>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100 mt-3">Enviar opinión</button>
+        <div class="mb-3">
+          <label for="Comentario" class="form-label">¿Algun comentario?</label>
+          <textarea class="form-control" id="Comentario" name="Comentario" rows="4" placeholder="Escribe tu opinión aquí..." required></textarea>
+        </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="Empresa o particular" id="radioEmpresa" value="empresa">
+          <label class="form-check-label" for="radioEmpresa">
+            Empresa
+          </label>
+        </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="Empresa o particular" id="radioParticular" value="particular" checked>
+          <label class="form-check-label" for="radioParticular">
+            Particular
+          </label>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100 mt-3">Enviar</button>
       </form>
     </div>
   </div>
