--- a/pages/forms.html
+++ b/pages/forms.html
@@ -14,6 +14,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="../index.html">Vuelve al Inicio</a>
+      <img src="../img/Tonkas Tecnologicx.png" alt="Logo de Tonkas Tecnologicx" width="75" height="75">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -72,7 +73,7 @@
   </div>
 </div>
 
-<footer class="bg-dark text-white text center flex-center p-3 mt-4">
+<footer class="bg-dark text-white text-center flex-center p-3 mt-4">
   © 2025 Tonkas Tecnologicx
 </footer>
 
