--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 </div>
 <div id="container3">
         <div class="row" >
-            <div class="col bg-dark rounded"></div>
+            <div class="col bg-dark rounded d-flex justify-content-center"> <img src="img/Edgar Posando.png" alt="Oficina" class="d-block w-200" style="width: 275px; height: 425px; ;">
+            </div>
             <div class="col bg-dark rounded">
                 <div id="demo" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -119,7 +120,8 @@
                 </button>
                 </div>
             </div>
-            <div class="col bg-dark rounded"></div>
+            <div class="col bg-dark rounded d-flex justify-content-center align-self-center"> <img src="img/Alex Posando.png" alt="Oficina" class="d-block w-200" style="width: 275px; height: 425px; ;">
+            </div>
         </div>
 </div>
 <footer class="bg-dark text-white text-center rounded p-3">
