--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class=" d-flex justify-content-center align-items-center">
                         <div class="card-body">
                             <h5 class="card-title">Edgar de la Torre</h5>
-                            <p class="card-text">CoCEO especializado en mecanica.</p>
+                            <p class="card-text">CoCEO especializado en mecánica.</p>
                             <a href="https://www.canva.com/design/DAGzrm0UMks/yaTN_-DRa3iPz-QJCPU1pQ/edit?utm_content=DAGzrm0UMks&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary float-down">CV</a>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
         <div class="col"    >
             <h2>Datos de interes</h2>
             <div class="d-flex align-items-center">
-                <h5>Nuestra empresa se dedica a la gestion y desarrollo de dispositivos tecnologicos. Distribuimos equipo informatico, mecanico y electronico a centros comerciales, centros educativos, centros deportivos y a clientes particulares.</h5>
+                <h5>Nuestra empresa se dedica a la gestión y desarrollo de dispositivos tecnológicos. Distribuimos equipo informático, mecánico y electrónico a centros comerciales, centros educativos, centros deportivos y a clientes particulares.</h5>
             </div>
         </div>
             <div class="col">
