--- a/pages/+Inf.html
+++ b/pages/+Inf.html
@@ -57,7 +57,7 @@
             <div class="col">
                 <h2>Nuestro Logo</h2>
                     <div class="d-flex justify-content-center align-items-center mb-3">
-                        <p>El logo de Tonkas Tecnologicxs representa la union entre la pesonas mediante la tecnologia</p>
+                        <p>El logo de Tonkas Tecnologicxs representa la unión entre la personas mediante la tecnología.</p>
                     </div>
             </div>
                 <div class="col d-flex justify-content-center align-items-center">
@@ -78,7 +78,7 @@
             <div class="col">
                 <h2>Nuestro Trasfondo</h2>
                     <div class="d-flex justify-content-center align-items-center mb-3">
-                        <p>Antes eramos una empresa distinta, centrada en la tecnologia domotica.</p>
+                        <p>Antes éramos una empresa distinta, centrada en la tecnología domótica.</p>
                     </div>
             </div>
                 <div class="col d-flex justify-content-center align-items-center">
