--- a/pages/forms.html
+++ b/pages/forms.html
@@ -43,12 +43,12 @@
         </div>
 
         <div class="mb-3">
-          <label for="Numero de telefono" class="form-label">Numero de telefono:</label>
+          <label for="Numero de telefono" class="form-label">Número de telefono:</label>
           <input type="number" class="form-control" id="numero de telefono" name="numero de telefono" placeholder="XXX XX XX XX" required>
         </div>
 
         <div class="mb-3">
-          <label for="Comentario" class="form-label">¿Algun comentario?</label>
+          <label for="Comentario" class="form-label">¿Algún comentario?</label>
           <textarea class="form-control" id="Comentario" name="Comentario" rows="4" placeholder="Escribe tu opinión aquí..." required></textarea>
         </div>
 
