--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="text-white text-decoration-none mx-3 " href="pages/forms.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="text-white text-decoration-none mx-3 " href="pages/+Inf.html">Más Inormacion</a>
+                <a class="text-white text-decoration-none mx-3 " href="pages/+Inf.html">Más Información</a>
             </li>
             </ul>
         </div>
