--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Edgar de la Torre</h5>
                             <p class="card-text">CoCEO especializado en mecanica.</p>
-                            <a href="https://www.canva.com/design/DAGzrm0UMks/yaTN_-DRa3iPz-QJCPU1pQ/edit?utm_content=DAGzrm0UMks&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary float-down">CV</a>
+                            <a href="pages/cve.html" class="btn btn-primary float-down">CV</a>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Álex Fernández</h5>
                             <p class="card-text">CoCEO especializado en programación.</p>
-                            <a href="https://www.canva.com/design/DAGzZiMoEis/7jNKTJkYexDkrkm05MaJrg/edit?utm_content=DAGzZiMoEis&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary">CV</a>
+                            <a href="pages/cva.html" class="btn btn-primary">CV</a>
                         </div>
                     </div>
                 </div>
